k8s/kompose/infra/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
          image: keycloak/keycloak:26.0.2
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/health
            failureThreshold: 15
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
