k8s/kompose/infra/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: loki
    spec:
      containers:
        - image: grafana/loki:latest
          name: loki
          ports:
            - containerPort: 3100
              protocol: TCP
      restartPolicy: Always
