k8s/kompose/infra/user-service-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: user-service-mysql
  name: user-service-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: user-service-mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: user_service
            - name: MYSQL_ROOT_PASSWORD
              value: mysql
          image: mysql:8.3.0
          name: user-service-mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/data.sql
              name: user-service-mysql-claim0
            - mountPath: /var/lib/mysql
              name: user-service-mysql-claim1
      restartPolicy: Always
      volumes:
        - name: user-service-mysql-claim0
          persistentVolumeClaim:
            claimName: user-service-mysql-claim0
        - name: user-service-mysql-claim1
          persistentVolumeClaim:
            claimName: user-service-mysql-claim1
