k8s/kompose/infra/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: shoppermart
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - name: grafana
      port: 80
      targetPort: 3000
      protocol: TCP
