k8s/kompose/infra/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: kafka-ui
  name: kafka-ui
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8085
      protocol: TCP # Added for completeness
  selector:
    io.kompose.service: kafka-ui
  type: NodePort # Added for external access
