k8s/kompose/infra/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Ashbir Dhiman\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-infra.yml --volumes persistentVolumeClaim
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
